made image bigger

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -462,6 +462,7 @@ img {
   }
   .about__img img {
     width: 300px;
+    width: 400px;
   }
   .skills__container {
     grid-template-columns: repeat(2, 1fr);
