--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -324,6 +324,11 @@ img {
   transform: scale(1.1);
 }
 
+.expirience-date {
+  font-size: 12px;
+  line-break: normal;
+}
+
 /* ===== CONTACT =====*/
 .contact__input {
   width: 100%;
