--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -73,7 +73,7 @@ img{
 .section-title{
     position: relative;
     font-size: var(--h2-font-size);
-    color: var(--first-color);
+    color: rgb(108 138 165);
     margin-top: var(--mb-2);
     margin-bottom: var(--mb-4);
     text-align: center;
@@ -87,7 +87,7 @@ img{
         right: 0;
         margin: auto;
         top: 2rem;
-        background-color: var(--first-color);
+        background-color:rgb(153 96 24);
     }
 }
 .section{
